# HYPAR_SFE

./: .gitignore  ReadMe  arbitrary_eos.f90  update.f90
CTEST_SUITE/: CMakeLists.txt  function_regression_test.cmake  variables.cmake  variables.cmake_template
LIBS/: CMakeLists.txt  variables_lib.cmake
PROJECT_TEMPLATES/EULER/1D/IDP_SODT/: CMakeLists.txt  variables.cmake
PROJECT_TEMPLATES/EXAMPLE_ADV_DIFF_PERIODIC_1D/: CMakeLists.txt
PROJECT_TEMPLATES/EXAMPLE_ADV_DIFF_PERIODIC_1D/LOCAL_SOURCES/: main.F90
PROJECT_TEMPLATES/EXAMPLE_ADV_DIFF_PERIODIC_1D/RUN/: data  mesh
PROJECT_TEMPLATES/EXAMPLE_MESH_CREATION/: CMakeLists.txt  variables.cmake
PROJECT_TEMPLATES/EXAMPLE_MESH_CREATION/LOCAL_SOURCES/: main.F90
PROJECT_TEMPLATES/EXAMPLE_MESH_CREATION/RUN/: data  mesh
REGRESSION_SUITE/: CMakeLists.txt  job.sh
REGRESSION_SUITE/MESHES/: carre_0.1.FEM  step_regul_0.05_0.02.FEM
REGRESSION_SUITE/TEMPLATE_EULER_FE/: main.F90  start_setup.F90
REGRESSION_SUITE/TEST1/LOCAL_SOURCES/: data  setup.F90
REGRESSION_SUITE/TEST1/REGRESSION_TESTS/: current_regression_reference  job.sh  mesh  regression_reference
REGRESSION_SUITE/TEST2/LOCAL_SOURCES/: data
REGRESSION_SUITE/TEST2/REGRESSION_TESTS/: current_regression_reference  data  job.sh  mesh  regression_reference
REGRESSION_SUITE/TEST3/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST3/REGRESSION_TESTS/: current_regression_reference  job.sh  mesh  regression_reference
REGRESSION_SUITE/TEST4/LOCAL_SOURCES/: data  setup.F90
REGRESSION_SUITE/TEST4/REGRESSION_TESTS/: current_regression_reference  job.sh  regression_reference  regression_reference_1
REGRESSION_SUITE/TEST5/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST5/REGRESSION_TESTS/: current_regression_reference  data  job.sh  regression_reference
REGRESSION_SUITE/TEST6/: CMakeLists.txt
REGRESSION_SUITE/TEST6/LOCAL_SOURCES/: main.F90
REGRESSION_SUITE/TEST6/REGRESSION_TESTS/: job.sh
REGRESSION_SUITE/TEST7/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST7/REGRESSION_TESTS/: data  regression_reference_1  regression_reference_2
REGRESSION_SUITE/TEST8/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST8/REGRESSION_TESTS/: data  data_1  data_2  regression_reference_1  regression_reference_2
REGRESSION_SUITE/TEST9/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST9/REGRESSION_TESTS/: data  job.sh  regression_reference_1
REGRESSION_SUITE/TEST_EULER_FE_TEMPLATE/: CMakeLists.txt  start_setup.F90
REGRESSION_SUITE/TEST_FE_1D_EULER/: CMakeLists.txt
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_SMOOTH/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_SMOOTH/REGRESSION_TESTS/: data  data_1  job.sh  regression_reference_1
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_SODT/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_SODT/REGRESSION_TESTS/: data  data_1  job.sh  regression_reference_1
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_SODT_HIGH_ORDER/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_SODT_HIGH_ORDER/REGRESSION_TESTS/: data_1  regression_reference_1
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_SODT_HIGH_ORDER_LIMITING/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_SODT_HIGH_ORDER_LIMITING/REGRESSION_TESTS/: data_1  regression_reference_1
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_SODT_HIGH_ORDER_LIMITING_MINMODE/REGRESSION_TESTS/: data_1
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_VANDERWALLS/LOCAL_SOURCES/: setup.F90  vdw.F90
REGRESSION_SUITE/TEST_FE_1D_EULER/FE_1D_VANDERWALLS/REGRESSION_TESTS/: data  data_1  job.sh  mesh  regression_reference_1
REGRESSION_SUITE/TEST_FE_1D_EULER/TEMPLATE/: main.F90  start_setup.F90
REGRESSION_SUITE/TEST_FE_2D_EULER/: CMakeLists.txt
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_ISENTROPIC_VORTEX/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_ISENTROPIC_VORTEX/REGRESSION_TESTS/: data  data_1  job.sh  regression_reference_1
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_ISENTROPIC_VORTEX_HIGH_ORDER/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_ISENTROPIC_VORTEX_HIGH_ORDER/REGRESSION_TESTS/: data_1  regression_reference_1
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_ISENTROPIC_VORTEX_HIGH_ORDER_LIMITING/MESHES/: unit_sq_0.1.FEM
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_ISENTROPIC_VORTEX_HIGH_ORDER_LIMITING/REGRESSION_TESTS/: data_1  regression_reference_1
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_ISENTROPIC_VORTEX_HIGH_ORDER_LIMITING_AVG/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_ISENTROPIC_VORTEX_HIGH_ORDER_LIMITING_AVG/REGRESSION_TESTS/: data_1  job.sh  regression_reference_1
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_WIND_TUNNEL/LOCAL_SOURCES/: setup.F90
REGRESSION_SUITE/TEST_FE_2D_EULER/FE_2D_WIND_TUNNEL/REGRESSION_TESTS/: data  data_1  job.sh  regression_reference_1
REGRESSION_SUITE/TEST_FE_2D_EULER/TEMPLATE/: CMakeLists.txt_template  main.F90  start_setup.F90  variables.cmake_template
REGRESSION_SUITE/TEST_FFT/: CMakeLists.txt
REGRESSION_SUITE/TEST_FFT/FFT_1D/LOCAL_SOURCES/: main.F90
REGRESSION_SUITE/TEST_FFT/REGRESSION_TESTS/: data  job.sh
REGRESSION_SUITE/TEST_FOURIER_1D_SCALAR/: CMakeLists.txt
REGRESSION_SUITE/TEST_FOURIER_1D_SCALAR/TEMPLATE/: main.F90  start_setup.F90
REGRESSION_SUITE/TEST_HYPAR_TOOLS/: CMakeLists.txt
REGRESSION_SUITE/TEST_IDP_FOURIER_1D_TEMPLATE/NL_SCALAR_CONS/: CMakeLists.txt  main.F90
REGRESSION_SUITE/TEST_PERIODICITY/: CMakeLists.txt
REGRESSION_SUITE/TEST_PERIODICITY/PERIODIC_1D_SCAL_ADV_DIFF/: CMakeLists.txt
REGRESSION_SUITE/TEST_PERIODICITY/PERIODIC_2D_SCAL_ADV_DIFF/: CMakeLists.txt
REGRESSION_SUITE/TEST_PERIODICITY/PERIODIC_FE_1D_EULER_SMOOTH/: CMakeLists.txt
SOURCES_GENERAL/MESH/: CMakeLists.txt  construct_mesh.F90  euler_bc_arrays.F90  euler_bc_arrays.f90  main.F90  prep_periodic.F90  read_mesh_data.F90  variables.cmake
SOURCES_GENERAL/MESH/1D/: load_mesh_1d.f90  mesh_1d.F90  mesh_distribution_1d.F90  mesh_distribution_1d.F90.f90
SOURCES_GENERAL/MESH/2D/: HCT_mesh.F90  PowSab_mesh.f90  mesh_2d.F90
TEMPLATE_CMAKE/: variables.cmake
(+235 files in other folders)
